@@ -116,6 +116,31 @@ func Test_syncPackage_downMoreLimit(t *testing.T) {
 	}
 }
 
+func Test_syncPackage_purgeNone(t *testing.T) {
+	rr := []*ftl.RevisionInfo{
+		{"test", "001"},
+		{"test", "002"},
+	}
+
+	lr := []*ftl.RevisionInfo{
+		{"test", "001"},
+		{"test", "002"},
+	}
+
+	download, purge, err := syncPackage(rr, lr, &ftl.RevisionInfo{"test", "002"})
+	if err != nil {
+		t.Error("Error from syncPackage", err)
+	}
+
+	if len(download) > 0 {
+		t.Error("Expected no downloads")
+	}
+
+	if len(purge) > 0 {
+		t.Error("Expected no purges")
+	}
+}
+
 func Test_syncPackage_purgeOne(t *testing.T) {
 	rr := []*ftl.RevisionInfo{
 		{"test", "002"},
@@ -136,6 +161,33 @@ func Test_syncPackage_purgeOne(t *testing.T) {
 	}
 
 	if len(purge) != 1 {
+		t.Error("Expected a purges")
+	}
+
+	if purge[0].Revision != "001" {
+		t.Error("Expected purge 001")
+	}
+}
+
+func Test_syncPackage_purgeAll(t *testing.T) {
+	rr := []*ftl.RevisionInfo{
+	}
+
+	lr := []*ftl.RevisionInfo{
+		{"test", "001"},
+		{"test", "002"},
+	}
+
+	download, purge, err := syncPackage(rr, lr, nil)
+	if err != nil {
+		t.Error("Error from syncPackage", err)
+	}
+
+	if len(download) > 0 {
+		t.Error("Expected no downloads")
+	}
+
+	if len(purge) != 2 {
 		t.Error("Expected a purges")
 	}
 
