@@ -1,3 +1,9 @@
+ftl (0.2.3)
+
+  * Don't purge local revisions just because they are behind previous
+
+-- Rhett Garber <rhettg@gmail.com>  Mon, 2 Dec 2013 15:57:00 -0800
+
 ftl (0.2.2)
 
   * Fix a bug with empty syncs
